# DER_Designer

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  build.bat  build.sh
.github/workflows/: build-linux.yml  build-windows.yml  release.yml  test-qt-install.yml  test-qt.yml
html/: _attribute_8cpp.html  _attribute_8cpp__incl.map  _attribute_8cpp__incl.md5  _attribute_8h.html  _attribute_8h.js  _attribute_8h__dep__incl.map  _attribute_8h__dep__incl.md5  _attribute_8h__incl.map  _attribute_8h__incl.md5  _attribute_8h_source.html  _attribute_renderer_8cpp.html  _attribute_renderer_8cpp__incl.map  _attribute_renderer_8cpp__incl.md5  _attribute_renderer_8h.html  _attribute_renderer_8h.js  _attribute_renderer_8h__dep__incl.map  _attribute_renderer_8h__dep__incl.md5  _attribute_renderer_8h__incl.map  _attribute_renderer_8h__incl.md5  _attribute_renderer_8h_source.html  _attribute_type_8cpp.html  _attribute_type_8cpp__incl.map  _attribute_type_8cpp__incl.md5  _attribute_type_8h.html  _attribute_type_8h.js  _attribute_type_8h__dep__incl.map  _attribute_type_8h__dep__incl.md5  _attribute_type_8h__incl.map  _attribute_type_8h__incl.md5  _attribute_type_8h_source.html  _auto_save_manager_8cpp.html  _auto_save_manager_8cpp__incl.map  _auto_save_manager_8cpp__incl.md5  _auto_save_manager_8h.html  _auto_save_manager_8h.js  _auto_save_manager_8h__dep__incl.map  _auto_save_manager_8h__dep__incl.md5  _auto_save_manager_8h__incl.map  _auto_save_manager_8h__incl.md5  _auto_save_manager_8h_source.html  (+1825 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+61 more)
latex/: _attribute_8cpp.tex  _attribute_8cpp__incl.md5  _attribute_8h.tex  _attribute_8h__dep__incl.md5  _attribute_8h__incl.md5  _attribute_8h_source.tex  _attribute_renderer_8cpp.tex  _attribute_renderer_8cpp__incl.md5  _attribute_renderer_8h.tex  _attribute_renderer_8h__dep__incl.md5  _attribute_renderer_8h__incl.md5  _attribute_renderer_8h_source.tex  _attribute_type_8cpp.tex  _attribute_type_8cpp__incl.md5  _attribute_type_8h.tex  _attribute_type_8h__dep__incl.md5  _attribute_type_8h__incl.md5  _attribute_type_8h_source.tex  _auto_save_manager_8cpp.tex  _auto_save_manager_8cpp__incl.md5  _auto_save_manager_8h.tex  _auto_save_manager_8h__dep__incl.md5  _auto_save_manager_8h__incl.md5  _auto_save_manager_8h_source.tex  _basic_element_8cpp.tex  _basic_element_8cpp__incl.md5  _basic_element_8h.tex  _basic_element_8h__dep__incl.md5  _basic_element_8h__incl.md5  _basic_element_8h_source.tex  _bezier_control_point_8cpp.tex  _bezier_control_point_8cpp__incl.md5  _bezier_control_point_8h.tex  _bezier_control_point_8h__dep__incl.md5  _bezier_control_point_8h__incl.md5  _bezier_control_point_8h_source.tex  _connection_graphics_item_8cpp.tex  _connection_graphics_item_8cpp__incl.md5  _connection_graphics_item_8h.tex  _connection_graphics_item_8h__dep__incl.md5  (+856 more)
src/: app.rc  main.cpp  recursos.qrc
src/controller/: DiagramScene.cpp  DiagramScene.h  PropertyCommand.cpp  PropertyCommand.h
src/model/: Attribute.cpp  Attribute.h  AttributeType.cpp  AttributeType.h  AutoSaveManager.cpp  AutoSaveManager.h  BasicElement.cpp  BasicElement.h  ConnectionLine.cpp  ConnectionLine.h  ConnectionPoint.cpp  ConnectionPoint.h  DiagramFileManager.cpp  DiagramFileManager.h  DiagramSerializer.cpp  DiagramSerializer.h  ElementFactory.cpp  ElementFactory.h  Entity.cpp  Entity.h  JsonHelper.cpp  JsonHelper.h  PropertyCommand.cpp  Relationship.cpp  Relationship.h  RelationshipConnectionLine.cpp  RelationshipConnectionLine.h  RelationshipEnd.cpp  RelationshipEnd.h
src/view/: AttributeRenderer.h  ConnectionGraphicsItem.cpp  ConnectionGraphicsItem.h  DiagramScene.cpp  DiagramScene.h  DiagramView.cpp  DraggableButton.cpp  ElementGraphicsItem.cpp  ElementRenderer.h  EntityRenderer.cpp  EntityRenderer.h  MainWindow.cpp  MainWindow.h  PropertiesPanel.cpp  PropertiesPanel.h  RelationshipConnectionLineGraphicsItem.cpp  RelationshipConnectionLineGraphicsItem.h  RelationshipRenderer.cpp
src/viewer/: AttributeRenderer.cpp  AttributeRenderer.h  BezierControlPoint.cpp  BezierControlPoint.h  ConnectionGraphicsItem.cpp  ConnectionGraphicsItem.h  DiagramView.cpp  DiagramView.h  DraggableButton.cpp  DraggableButton.h  ElementGraphicsItem.cpp  ElementGraphicsItem.h  ElementRenderer.cpp  ElementRenderer.h  EntityRenderer.cpp  EntityRenderer.h  MainWindow.cpp  MainWindow.h  QuickAcessToolBar.cpp  QuickAcessToolBar.h  QuickAcessToolbar.h  RelationshipRenderer.cpp  RelationshipRenderer.h
